--- a/environment.yml
+++ b/environment.yml
@@ -7,17 +7,12 @@ dependencies:
   - pip
   - pytorch-cuda=11.6
   - torchvision
-  - pytorch
+  - pytorch==1.13.1
   - pip:
-    - accelerate==0.23.0
-    - diffusers==0.12.1
-    - einops
+    - accelerate==0.26.1
     - gradio
-    - ipython
-    - numpy
-    - opencv-python-headless
-    - pillow
+    - numpy==1.24.4
+    - #opencv-python-headless
     - psutil
-    - tqdm
-    - transformers==4.26.1
+    - tqdm==4.66.1
     - salesforce-lavis
